Kong/attach-kongplugin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-servic
  annotations:
    konghq.com/plugins: vote-rate-limit
spec:
  selector:
    app: vote-app
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: result-servic
  annotations:
    konghq.com/plugins: result-rate-limit
spec:
  selector:
    app: result-app
  ports:
  - port: 5001
    targetPort: 5001
