Kong/Kong-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /kong
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
